--- a/front/src/app/scss/blocks/sections/_editor-section.scss
+++ b/front/src/app/scss/blocks/sections/_editor-section.scss
@@ -75,7 +75,7 @@
                         rgba(255, 255, 255, 0.38) 100%
                     );
                     width: 100%;
-                    height: 71px;
+                    height: 110px;
                     z-index: 2;
                     pointer-events: none;
                     position: absolute;
