--- a/front/src/app/scss/blocks/sections/_faq-section.scss
+++ b/front/src/app/scss/blocks/sections/_faq-section.scss
@@ -224,7 +224,7 @@
         }
 
         .acc__item:last-of-type {
-            border-bottom: none;
+            border-bottom: 1px solid var(--cl-k);
         }
     }
 
